# docker-swarm-mcp

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =4.1  AGENTS.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION-SUMMARY.md  MCP-INTEGRATION-PLAN.md  PRE-RELEASE-CHECKLIST.md  README.md  SECURITY-AUDIT-REPORT.md  SECURITY.md  SESSION-SUMMARY.md  dev_server.py  docker-compose.override.yaml.example  docker-compose.yaml  env.example  filter-config.json  mcp.client.json.example  mock_mcp_server.py  opencode.json  poetry_scripts.py  pyproject.toml  test_mcp_endpoints.py  tools.yaml
.claude-flow/metrics/: performance.json  task-metrics.json
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  secret-scan.yml
.kilocode/: mcp.json
app/: docker_client.py  main.py
app/core/: auth.py  config.py  constants.py  errors.py  logging.py
app/mcp/: fastapi_mcp_integration.py  health.py  intent_classifier.py  tool_gating.py  tool_registry.py
app/routers/: containers.py  networks.py  services.py  stacks.py  system.py  volumes.py
app/schemas/: containers.py  ipam.py  networks.py  services.py  stacks.py  system.py  volumes.py
app/services/: __init__.py  container_service.py  meta_service.py  network_service.py  service_service.py  stack_service.py  system_service.py  volume_service.py
app/utils/: retry.py
archive/: IMPLEMENTATION-SUMMARY.md  MCP-INTEGRATION-PLAN.md  README.md.old  opencode.json
dev-utils/: dev_server.py  mock_mcp_server.py
docs/: AUTH_TEST_RESULTS.md  MCP-CLIENT-SETUP.md  MCP-JSON-RPC-USAGE.md  MCP-QUICK-REFERENCE.md  TROUBLESHOOTING.md  base-prp.md  fastapi-mcp-integration-research.md  mcp-client-config.schema.json  retrieval-guidelines.md  speckit-reference.md  tool-gating.md
docs/dependencies/: compose.md  docker.md  fastapi.md  ngrok.md  pydantic.md  swarm.md  tailscale.md  tls.md  uvicorn.md
docs/frameworks/: framework_fastapi.md  framework_model_context_protocol.md
docs/frameworks/static-backup/: fastapi.md  framework_model_context_protocol.md
docs/libraries/: library_docker-sdk.md  library_pydantic.md  library_uvicorn.md
docs/libraries/static-backup/: docker-sdk.md  pydantic.md  uvicorn.md
docs/tools/: tool_pytest.md
docs/tools/static-backup/: pytest.md
scripts/: entrypoint.sh  validate_tools_schemas.py
tests/: conftest.py  test_auth_endpoints.py  test_auth_simple.py  test_auth_validation.py  test_docker_client_modes.py  test_error_handling.py  test_intent_classifier.py  test_mcp_endpoints.py  test_mcp_protocol.py  test_mcp_protocol.py.bak  test_retry_behavior.py  test_tailscale_config.py  test_token_file.py  test_version_and_routes.py  validate_context_size.py
